@@ -1,8 +1,8 @@
 Package: quanteda
 Type: Package
 Title: Quantitative Analysis of Textual Data
-Version: 0.6.5.001
-Date: 2015-01-05
+Version: 0.6.5.002
+Date: 2015-01-06
 Authors@R: c(
     person("Benoit", "Kenneth", email = "kbenoit@lse.ac.uk", role = "cre"),
     person("Nulty", "Paul", email = "paul.nulty@gmail.com", role = "aut"),
